2002-09-04  Darin Adler  <darin@apple.com>

	Removed the now-unnecessary iconURL from bookmarks and history.

        * Bookmarks.subproj/WebBookmark.h:
        * Bookmarks.subproj/WebBookmark.m:
        * Bookmarks.subproj/WebBookmarkGroup.h:
        * Bookmarks.subproj/WebBookmarkGroup.m:
        * Bookmarks.subproj/WebBookmarkLeaf.h:
        * Bookmarks.subproj/WebBookmarkLeaf.m:
        * History.subproj/WebHistory.h:
        * History.subproj/WebHistory.m:
        * History.subproj/WebHistoryItem.h:
        * History.subproj/WebHistoryItem.m:
        * History.subproj/WebHistoryPrivate.h:
        * History.subproj/WebHistoryPrivate.m:
	Removed iconURL instance variables, methods, and parameters.

2002-09-04  Darin Adler  <darin@apple.com>

	Did some minor plugin cleanup, mostly to make sure we don't
	change pages while a plugin is tracking.

        * Plugins.subproj/WebPluginView.h: Add sendEvent and sendUpdateEvent.
	Remove the NPP_HandleEvent method.
        * Plugins.subproj/WebPluginView.m:
        (-[WebNetscapePluginView sendEvent:]): Sets up the "defersCallbacks"
	state, then sends the event.

        * Plugins.subproj/WebNetscapePluginViewPrivate.h: Added.
	This stuff was shared in a different way before, and it
	hadn't even been renamed.
        * WebKit.pbproj/project.pbxproj: Added file.
        * Plugins.subproj/npapi.m: Use the new private header.

        * Plugins.subproj/WebPluginNullEventSender.h: Hold a reference
	to the view.
        * Plugins.subproj/WebPluginNullEventSender.m:
        (-[WebNetscapePluginNullEventSender initWithPluginView:]):
	Retain the view.
        (-[WebNetscapePluginNullEventSender dealloc]): Release the view.
        (-[WebNetscapePluginNullEventSender sendNullEvents]): Use sendEvent:.
        (-[WebNetscapePluginNullEventSender stop]): No need for shouldStop.

        * WebView.subproj/WebDataSourcePrivate.m:
        (-[WebDataSourcePrivate init]): Don't set contentPolicy to an enum value,